ajout d'une vidéo hover pirate_musicien

--- a/site.html
+++ b/site.html
@@ -110,6 +110,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
     <img src="images/costumes/pirate_musicien.jpg">
+    <video src="videos/costumes/pirate_musicien.mp4" class="card-video" muted loop autoplay></video>
     <h3>Pirate musicien</h3>
     <div class="details">
         Personnage à l'allure élégante et pleine de charme, ce pirate squelettique traverse les mers au rythme de sa musique entraînante. Drôle, surprenant et toujours prêt à divertir, il apporte une touche d'humour et de fantaisie à chaque événement.
