ajout des dernieres vidéos des costumes en hover

--- a/site.html
+++ b/site.html
@@ -90,6 +90,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/santa_jack.jpg">
+     <video src="videos/costumes/santa_jack.mp4" class="card-video" muted loop autoplay></video>
      <h3>Santa Jack</h3>
      <div class="details">
 	Version hivernale de Jack, Santa Jack apporte la magie de Noël.. sur échasses! Son style unique mélange féerie, élégance et une pointe d'humour.</div></div>
@@ -119,6 +120,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/pirate_musicien_noel.jpg">
+     <video src="videos/costumes/pirate_musicien_noel.mp4" class="card-video" muted loop autoplay></video>
      <h3>Pirate musicien - </h3>
 
      <div class="details">
@@ -133,6 +135,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/ryujin.jpg">
+     <video src="videos/costumes/ryujin.mp4" class="card-video" muted loop autoplay></video>
      <h3>Ryujin – Dragon chinois</h3>
      <div class="details">
 	Symbole de puissance et de prospérité, Ryujin impressionne par sa prestance et ses mouvements ondulants. Un numéro lumineux et spectaculaire.</div></div>
