--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ body {
     word-wrap: break-word; /* 🔹 coupe les mots trop longs si besoin */
 }
 
+
 /* BOUTON DÉCOUVRIR */
 .discover {
     position: absolute;
@@ -73,8 +74,10 @@ body {
     }
 
     .slogan-box h1 {
-        font-size: 2em;
+        font-size: 1.6em;
+        line-height: 1.3;
     }
+
 
     .discover {
         top: 78%;
