test du changement de background version mobile

--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@ body {
     transform: translateX(-50%) scale(1.1);
     transform-origin: center;
 }
+@media (max-width: 768px) {
 
+    .hero {
+        background: url("images/logo_mobile.png") center center no-repeat;
+        background-size: contain;
+    }
+
+}
 /* RESPONSIVE MOBILE */
 @media (max-width: 768px) {
     .slogan-box {
