--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@ body {
 /* RESPONSIVE MOBILE */
 @media (max-width: 768px) {
     .slogan-box {
-        top: 60%;
+        top: 50%;
         padding: 20px 20px; /* 🔹 padding plus petit pour petits écrans */
     }
 
     .slogan-box h1 {
-        font-size: 1.6em;
-        line-height: 1.3;
+        font-size: 1.4em;
+        line-height: 1.25;
+        white-space: normal;
     }
 
 
