ajustement de la position du slogna en verison mobile

--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@ body {
 /* RESPONSIVE MOBILE */
 @media (max-width: 768px) {
     .slogan-box {
-        top: 50%;
-        padding: 20px 20px; /* 🔹 padding plus petit pour petits écrans */
+        top: 48%;
+        padding: 16px 18px;
+        max-width: 95%;   /* 🔥 PLUS LARGE = moins de lignes */
     }
 
     .slogan-box h1 {
-        font-size: 1.4em;
-        line-height: 1.25;
+        font-size: 1.3em;   /* légèrement plus petit */
+        line-height: 1.2;
         white-space: normal;
     }
+}
+
 
 
     .discover {
