--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@ body {
 .slogan-box {
     position: absolute;
     left: 50%;
-    top: 58%; /* 🔹 descendu un peu plus haut pour laisser de l'espace */
+    top: 67%; /* 🔹 ajusté pour centrer verticalement */
     transform: translateX(-50%);
     background: rgba(0,0,0,0.75);
-    padding: 25px 45px;
-    border-radius: 12px;
+    padding: 20px 40px;   /* 🔹 réduit un peu le padding pour tenir sur une ligne */
+    border-radius: 25px;
     text-align: center;
-    max-width: 90%;
+    max-width: 100%;      /* 🔹 utilise toute la largeur dispo */
     box-sizing: border-box;
 }
 
-
 .slogan-box h1 {
     margin: 0;
-    font-size: 2.8em;
+    font-size: 2.5em;     /* 🔹 légèrement réduit si besoin */
     line-height: 1.2;
-    white-space: normal; /* 🔹 autorise le retour à la ligne */
-    word-wrap: break-word; /* 🔹 coupe les mots trop longs si besoin */
+    white-space: nowrap;  /* 🔹 force une seule ligne */
+    overflow: hidden;     /* 🔹 empêche le débordement */
+    text-overflow: ellipsis; /* 🔹 ajoute "..." si ça dépasse (optionnel) */
 }
 
 
@@ -50,13 +50,14 @@ body {
 .discover {
     position: absolute;
     left: 50%;
-    top: 80%;
+    top: 82%;
     transform: translateX(-50%);
     text-decoration: none;
-    background: #fff;
+    background: #fffc5c;
     color: #000;
-    padding: 15px 45px;
+    padding: 30px 90px;
     font-weight: bold;
+    font-size: 1.5em; /* 🔹 augmente la taille du texte */
     border-radius: 40px;
     transition: transform 0.3s, box-shadow 0.3s;
 }
