mise en place du son pour la vidéo du site + réglages volume et mise en pause, ajustement de certain texte + couleur du bouton découvrir

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
     top: 82%;
     transform: translateX(-50%);
     text-decoration: none;
-    background: #fffc5c;
+    background: #ffcc00;
     color: #000;
     padding: 30px 90px;
     font-weight: bold;
