--- a/site.html
+++ b/site.html
@@ -110,7 +110,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 <div class="card card-box reveal">
      <img src="images/costumes/dieu_de_la_mort.jpg">
      <video src="videos/costumes/dieu_de_la_mort.mp4" class="card-video" muted loop autoplay></video>
-     <span class="stamp stamp-purple">DRÔLE</span>
+     <span class="stamp stamp-purple">FRISSON</span>
      <h3>Dieu de la Mort</h3>
      <div class="details">
 	Figure majestueuse entre le monde des vivants et celui des esprits, ce personnage veille dans un silence solennel. Une présence forte, intrigante, mais toujours adaptée au tout public.</div></div>
