--- a/main.html
+++ b/main.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VGM Cosplay</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
 
-<a href="index.html" class="back-btn">← Retour à l’accueil</a>
+<a href="home.html" class="back-btn">← Retour à l’accueil</a>
 
 <header>
     <div class="logo">VGM COSPLAY</div>
@@ -492,7 +493,7 @@ Participez à nos ateliers créatifs et immersifs, où imagination et savoir-fai
   <div class="footer-content">
     <img src="images/footer/logo_vgm.png" alt="Logo VGM Cosplay" class="footer-logo">
     
-    <h4>VGM Cosplay — Version 1.5.4 • © 2026</h4>
+    <h4>VGM Cosplay — Version 1.5.5 • © 2026</h4>
     
     <img src="images/footer/logo_kazuko.png" alt="Logo Association" class="footer-logo">
   </div>
