renomage de main&home en site&index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
         <h1>Donnez de la hauteur à vos événements !</h1>
     </div>
 
-    <a href="main.html" class="discover">Découvrir</a>
+    <a href="site.html" class="discover">Découvrir</a>
 
 </div>
 
