--- a/site.html
+++ b/site.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<a href="home.html" class="back-btn">← Retour à l’accueil</a>
+<a href="index.html" class="back-btn">← Retour à l’accueil</a>
 
 <header>
     <div class="logo">VGM COSPLAY</div>
