nettoyage css + barre de volume ajustable en zoom

--- a/site.html
+++ b/site.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VGM Cosplay</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mobile.css">
+
 </head>
+
 <body>
 
 <a href="index.html" class="back-btn">← Retour à l’accueil</a>
@@ -33,16 +36,17 @@
     <source src="videos/video_promo_vgm.mp4" type="video/mp4">
     Votre navigateur ne supporte pas la vidéo.
   </video>
-</div>
-
-
-
-<!-- Contrôles -->
+  <!-- Contrôles -->
   <div class="video-controls">
     <button id="playPauseBtn">▶️</button>
     <label for="volumeRange">Volume :</label>
     <input type="range" id="volumeRange" min="0" max="1" step="0.01" value="0.5">
   </div>
+</div>
+
+
+
+
 
 <section class="section" id="costumes">
 <h2>Nos Costumes</h2>
@@ -493,7 +497,7 @@ Participez à nos ateliers créatifs et immersifs, où imagination et savoir-fai
   <div class="footer-content">
     <img src="images/footer/logo_vgm.png" alt="Logo VGM Cosplay" class="footer-logo">
     
-    <h4>VGM Cosplay — Version 1.5.5 • © 2026</h4>
+    <h4>VGM Cosplay<br>Version 1.6.3 • © 2026</h4>
     
     <img src="images/footer/logo_kazuko.png" alt="Logo Association" class="footer-logo">
   </div>
