--- a/index.html
+++ b/index.html
@@ -4,85 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>VGM Cosplay</title>
-
-
-<style>
-/* RESET */
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #000;
-    color: #fff;
-}
-/* HERO */
-.hero {
-    height: 100vh;
-    background: url("images/logo.png") center center no-repeat;
-    background-size: contain;
-    position: relative;
-    overflow: hidden;
-}
-
-/* SLOGAN – PAVÉ POSITIONNABLE */
-.slogan-box {
-    position: absolute;
-    left: 50%;
-    top: 67%; /* 🔹 ajusté pour centrer verticalement */
-    transform: translateX(-50%);
-    background: rgba(0,0,0,0.75);
-    padding: 20px 40px;   /* 🔹 réduit un peu le padding pour tenir sur une ligne */
-    border-radius: 25px;
-    text-align: center;
-    max-width: 100%;      /* 🔹 utilise toute la largeur dispo */
-    box-sizing: border-box;
-}
-
-.slogan-box h1 {
-    margin: 0;
-    font-size: 2.5em;     /* 🔹 légèrement réduit si besoin */
-    line-height: 1.2;
-    white-space: nowrap;  /* 🔹 force une seule ligne */
-    overflow: hidden;     /* 🔹 empêche le débordement */
-    text-overflow: ellipsis; /* 🔹 ajoute "..." si ça dépasse (optionnel) */
-}
-
-
-/* BOUTON DÉCOUVRIR */
-.discover {
-    position: absolute;
-    left: 50%;
-    top: 82%;
-    transform: translateX(-50%);
-    text-decoration: none;
-    background: #ffcc00;
-    color: #000;
-    padding: 30px 90px;
-    font-weight: bold;
-    font-size: 1.5em; /* 🔹 augmente la taille du texte */
-    border-radius: 40px;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.discover:hover {
-    transform: translateX(-50%) scale(1.1);
-    transform-origin: center;
-}
-
-
-</style>
+<link rel="stylesheet" href="css/home.css">
+<link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/mobile.css">
+
 </head>
 
 <body>
 
-<div class="hero">
+<div class="home-hero">
 
     <div class="slogan-box">
         <h1>Donnez de la hauteur à vos événements !</h1>
     </div>
-
-    <a href="site.html" class="discover">Découvrir</a>
-
+<a href="site.html" class="discover">
+    <span class="discover-inner">Découvrir</span>
+</a>
 </div>
 
 </body>
