otpimisation agenda version mobile + reglage de l'emplacement du bouton agenda + nettoyage code

--- a/agenda.html
+++ b/agenda.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Agenda 2026 - VGM Cosplay</title>
 <link rel="stylesheet" href="css/agenda.css">
+<link rel="stylesheet" href="css/agenda_mobile.css">
+<link rel="stylesheet" href="css/main_mobile.css">
+
 </head>
 <body>
 
@@ -61,25 +64,13 @@
     <div class="footer-content">
         <img src="images/footer/logo_vgm.png" class="footer-logo" alt="Logo Footer 1">
 
-        <h4>VGM Cosplay<br>Version 1.7.3 • © 2026</h4>
+        <h4>VGM Cosplay<br>Version 1.8.2 • © 2026</h4>
 
         <img src="images/footer/logo_kazuko.png" class="footer-logo" alt="Logo Footer 2">
     </div>
 </footer>
 
-<script>
-function openModal(id){
-    const modal = document.getElementById(id);
-    modal.style.display = "flex";
-    modal.querySelector('video').currentTime = 0;
-    modal.querySelector('video').play();
-}
-function closeModal(id){
-    const modal = document.getElementById(id);
-    modal.style.display = "none";
-    modal.querySelector('video').pause();
-}
-</script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
