--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>VGM Cosplay</title>
 <link rel="stylesheet" href="css/home.css">
 <link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/mobile.css">
+<link rel="stylesheet" href="css/main_mobile.css">
 
 </head>
 
