maj de l'agneda

--- a/agenda.html
+++ b/agenda.html
@@ -57,14 +57,31 @@
             </div>
         </div>
     </div>
+  <!-- =====================
+         ÉVÉNEMENT 3
+    ===================== -->
+    <div class="agenda-event">
+        <div class="agenda-date">25 Avril<br>Carvin</div>
 
+        <img src="images/pastilles/salon_carvin.png" alt="Salon 3" class="agenda-logo"
+             onclick="window.open('https://lagendageek.com/tevent/le-salon-du-manga-2026/', '_blank')">
+
+        <div class="agenda-stamp" onclick="openModal('video2')"><img src="images/pastilles/brook.png"></div>
+
+        <div class="modal" id="video2">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal('video2')">&times;</span>
+                <video src="mp4videos/costumes/bao." controls autoplay></video>
+            </div>
+        </div>
+    </div>
 </main>
 
 <footer>
     <div class="footer-content">
         <img src="images/footer/logo_vgm.png" class="footer-logo" alt="Logo Footer 1">
 
-        <h4>VGM Cosplay<br>Version 1.9.4 • © 2026</h4>
+        <h4>VGM Cosplay<br>Version 1.9.5 • © 2026</h4>
 
         <img src="images/footer/logo_kazuko.png" class="footer-logo" alt="Logo Footer 2">
     </div>
