maj de l'agenda version mobile

--- a/agenda.html
+++ b/agenda.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="css/agenda.css">
 <link rel="stylesheet" href="css/agenda_mobile.css">
 <link rel="stylesheet" href="css/main_mobile.css">
-
 </head>
 <body>
 
@@ -25,17 +24,10 @@
     ===================== -->
     <div class="agenda-event">
         <div class="agenda-date">21 Mars<br>Caudry</div>
-    
-        <img src="images/pastilles/salon_st_patrick.png" alt="Salon 1" class="agenda-logo"
-             onclick="window.open('https://www.facebook.com/TheNightofSaintPatrick', '_blank')">
-
-        <div class="agenda-stamp" onclick="openModal('video1')"><img src="images/pastilles/st_patrick.png"></div>
-
-        <div class="modal" id="video1">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal('video1')">&times;</span>
-                <video src="" controls autoplay></video>
-            </div>
+        <div class="agenda-images">
+            <img src="images/pastilles/salon_st_patrick.png" alt="Salon 1" class="agenda-logo"
+                 onclick="window.open('https://www.facebook.com/TheNightofSaintPatrick', '_blank')">
+            <img src="images/pastilles/st_patrick.png" alt="Costume 1" class="agenda-logo">
         </div>
     </div>
 
@@ -44,50 +36,34 @@
     ===================== -->
     <div class="agenda-event">
         <div class="agenda-date">21 & 22 Mars<br>Cambrai</div>
-
-        <img src="images/pastilles/salon_cambrai.png" alt="Salon 2" class="agenda-logo"
-             onclick="window.open('https://www.facebook.com/SalonMPCCambrai/', '_blank')">
-
-        <div class="agenda-stamp" onclick="openModal('video2')"><img src="images/pastilles/bao.png"></div>
-
-        <div class="modal" id="video2">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal('video2')">&times;</span>
-                <video src="mp4videos/costumes/bao." controls autoplay></video>
-            </div>
+        <div class="agenda-images">
+            <img src="images/pastilles/salon_cambrai.png" alt="Salon 2" class="agenda-logo"
+                 onclick="window.open('https://www.facebook.com/SalonMPCCambrai/', '_blank')">
+            <img src="images/pastilles/bao.png" alt="Costume 2" class="agenda-logo">
         </div>
     </div>
-  <!-- =====================
+
+    <!-- =====================
          ÉVÉNEMENT 3
     ===================== -->
     <div class="agenda-event">
         <div class="agenda-date">25 Avril<br>Carvin</div>
-
-        <img src="images/pastilles/salon_carvin.png" alt="Salon 3" class="agenda-logo"
-             onclick="window.open('https://lagendageek.com/tevent/le-salon-du-manga-2026/', '_blank')">
-
-        <div class="agenda-stamp" onclick="openModal('video2')"><img src="images/pastilles/brook.png"></div>
-
-        <div class="modal" id="video2">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal('video2')">&times;</span>
-                <video src="mp4videos/costumes/bao." controls autoplay></video>
-            </div>
+        <div class="agenda-images">
+            <img src="images/pastilles/salon_carvin.png" alt="Salon 3" class="agenda-logo"
+                 onclick="window.open('https://lagendageek.com/tevent/le-salon-du-manga-2026/', '_blank')">
+            <img src="images/pastilles/brook.png" alt="Costume 3" class="agenda-logo">
         </div>
     </div>
+
 </main>
 
 <footer>
     <div class="footer-content">
         <img src="images/footer/logo_vgm.png" class="footer-logo" alt="Logo Footer 1">
-
-        <h4>VGM Cosplay<br>Version 1.9.5 • © 2026</h4>
-
+        <h4>VGM Cosplay<br>Version 1.9.6 • © 2026</h4>
         <img src="images/footer/logo_kazuko.png" class="footer-logo" alt="Logo Footer 2">
     </div>
 </footer>
-
-<script src="js/main.js"></script>
 
 </body>
 </html>
